[metadata]
name = conv_agent
version = 0.0.1
author = Mohammed Fellaji
author_email = fellajimohammed@gmail.com
description = A Conversational Agent. Can Also answer questions from a given url.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fellajimed/conv_agent
project_urls =
    Bug Tracker = https://github.com/fellajimed/conv_agent/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    conv_agent = conv_agent.main:main
